--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-      <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:300|Roboto" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
       <meta charset="UTF-8">
       <title>Peepz</title>
   </head>
