[web] blocking safari as it doesnt support webp, soz

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
   <head>
       <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="shortcut icon" href="favicon.png" type="image/png">
+      <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
       <meta charset="UTF-8">
       <title>Peepz</title>
   </head>
